--- a/src/components/ChatInterface.module.scss
+++ b/src/components/ChatInterface.module.scss
@@ -100,6 +100,12 @@
   margin-right: auto;
 }
 
+.providerBadge {
+  opacity: 0.6;
+  font-size: 10px;
+  margin-left: var(--static-space-8);
+}
+
 .loadingDots {
   display: flex;
   gap: 6px;
